[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/AsepriteWizard/animation_player/sprite_inspector_dock.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="sprite_inspector_dock" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 187.0
margin_bottom = 100.0

[node name="section_title" type="PanelContainer" parent="VBoxContainer"]
margin_right = 187.0
margin_bottom = 28.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="VBoxContainer/section_title"]
margin_left = 7.0
margin_top = 7.0
margin_right = 180.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Aseprite"
align = 1

[node name="animation_player" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 187.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/animation_player"]
margin_top = 3.0
margin_right = 105.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "AnimationPlayer"

[node name="options" type="OptionButton" parent="VBoxContainer/animation_player"]
margin_left = 109.0
margin_right = 187.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "[empty]"
align = 1
selected = 0

[node name="source" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 187.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="VBoxContainer/source"]
margin_top = 3.0
margin_right = 91.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Aseprite File"

[node name="button" type="Button" parent="VBoxContainer/source"]
margin_left = 95.0
margin_right = 187.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "[empty]"
clip_text = true

[node name="import" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 187.0
margin_bottom = 100.0
text = "Import"

[connection signal="item_selected" from="VBoxContainer/animation_player/options" to="." method="_on_options_item_selected"]
[connection signal="pressed" from="VBoxContainer/animation_player/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/source/button" to="." method="_on_source_pressed"]
[connection signal="pressed" from="VBoxContainer/import" to="." method="_on_import_pressed"]
